Move to one big playbook
It annoyed me to keep the only_config and normal playbooks up to date.
To avoid this issue I moved all playbooks into one big playbook and used
the tag only_config to reflect the abilities provided by the only_config
playbooks.

This is possible because set_fact will be visible for subsequent plays:
https://docs.ansible.com/ansible/2.8/modules/set_fact_module.html

Because I am using mostly nixos now I decided to make only_config a
default behavior. For a better understanding of the special tags never
and always: https://docs.ansible.com/ansible/2.8/user_guide/playbooks_tags.html

--- a/roles/chromium/tasks/main.yml
+++ b/roles/chromium/tasks/main.yml
@@ -11,4 +11,4 @@
   package:
     name: chromium-widevine
     state: installed
-  when: ansible_os_family == "Arch Linux" or ansible_os_family == "Archlinux"
+  when: (ansible_os_family == "Arch Linux" or ansible_os_family == "Archlinux") and only_config is not defined
