--- a/roles/fonts/tasks/main.yml
+++ b/roles/fonts/tasks/main.yml
@@ -3,17 +3,19 @@
   file:
     name: /tmp/fonts
     state: directory
-  when: ansible_os_family != "NixOS"
+  when: ansible_os_family != "NixOS" and only_config is not defined
 
 - name: Download Fantasque Sans Mono
   get_url:
     url: https://github.com/belluzj/fantasque-sans/releases/download/v1.7.1/FantasqueSansMono.tar.gz
     dest: /tmp/FantasqueSansMono.tar.gz
+  when: ansible_os_family != "NixOS" and only_config is not defined
 
 - name: Extract Fantasque Sans Mono
   unarchive:
     src: /tmp/FantasqueSansMono.tar.gz
     dest: /tmp/fonts
+  when: ansible_os_family != "NixOS" and only_config is not defined
 
 - name: Install Fantasque Mono
   become: true
@@ -21,16 +23,19 @@
     src: "{{ item }}"
     dest: /usr/share/fonts/
   with_fileglob: "/tmp/fonts/*.ttf"
+  when: ansible_os_family != "NixOS" and only_config is not defined
 
 - name: Download Font Awesome
   get_url:
     url: http://fontawesome.io/assets/font-awesome-4.7.0.zip
     dest: /tmp/font-awesome-4.7.0.zip
+  when: ansible_os_family != "NixOS" and only_config is not defined
 
 - name: Extract Font Awesome
   unarchive:
     src: /tmp/font-awesome-4.7.0.zip
     dest: /tmp/fonts/
+  when: ansible_os_family != "NixOS" and only_config is not defined
 
 - name: Install Font Awesome
   become: true
@@ -38,3 +43,4 @@
     src: "{{ item }}"
     dest: /usr/share/fonts/
   with_fileglob: "/tmp/fonts/font-awesome-4.7.0/fonts/*"
+  when: ansible_os_family != "NixOS" and only_config is not defined
