Add mpi debug function
The function is capable to attach to local debug_wrapper processes.
Hereby an ORDER is given specifying which process to attach to.

The script is also able to parse a hostfile in the MPI format to attach
to remote processes accordingly. Hereby the number of processes is
continuous over all hosts allowing for easy scripting around the
function.

--- a/roles/fish/tasks/main.yml
+++ b/roles/fish/tasks/main.yml
@@ -25,3 +25,4 @@
     - config.fish
     - "functions/fish_prompt.fish"
     - "functions/fish_user_key_bindings.fish"
+    - "functions/attachGDB_debugWrapper.fish"
