Drop xcape and personalize.yml and fix role user
Aftermath of the cleanup in e741308ff85db4d0fcd9b0211c7b1d7c17683a89
The xcape role turns out to be broken somehow (I don't now how yet).
And after consideration I don't need the content of personalize.yml
Also add a check that the fish variable is set properly

--- a/roles/user/tasks/main.yml
+++ b/roles/user/tasks/main.yml
@@ -1,6 +1,10 @@
+- debug:
+    msg: fish_user is not set
+  when: (ansible_os_family != "NixOS") and (fish_user is not defined) and (only_config is not defined)
+
 - name: Create user with fish shell as default
   become: true
   user:
     name: "{{ fish_user }}"
     shell: /usr/bin/fish
-  when: (ansible_os_family != "NixOS") and (fish_user is defined)
+  when: (ansible_os_family != "NixOS") and (fish_user is defined) and (only_config is not defined)
