fish: Add functions to find lost processes in tmux
Mostly intended for vims that I lost somewhere in background jobs

--- a/roles/fish/tasks/main.yml
+++ b/roles/fish/tasks/main.yml
@@ -26,3 +26,4 @@
     - "functions/fish_prompt.fish"
     - "functions/fish_user_key_bindings.fish"
     - "functions/attachGDB_debugWrapper.fish"
+    - "functions/tmux_program_finder.fish"
