Fix mistake from 57036088f5ed62bfc8d18c1097b83758d8a51b20
I removed the simlink for the vimrc by mistake

--- a/roles/vim/tasks/main.yml
+++ b/roles/vim/tasks/main.yml
@@ -42,3 +42,9 @@
     - backup
     - autoload
     - colors
+
+- name: Symlink vimrc
+  file:
+    src: "{{ role_path }}/files/vimrc"
+    dest: "~/.vimrc"
+    state: link
