--- a/roles/vimExtended/tasks/main.yml
+++ b/roles/vimExtended/tasks/main.yml
@@ -19,7 +19,7 @@
     url: https://raw.githubusercontent.com/junegunn/vim-plug/master/plug.vim
     dest: ~/.vim/autoload/plug.vim
 
-- name: Symlink vimrc
+- name: Symlink vimrc.d files
   file:
     src: "{{ role_path }}/files/vimrc.d/{{item}}"
     dest: "~/.vim/vimrc.d/{{item}}"
