i3-status: Show content of clipboard not selection
Note: The content of the PRIMARY selection can be pasted with middle
mouse button. This is not very convinient so I am using the CLIPBOARD
instead. This however is not the default selection that xsel is
operating on so it has to be specified.

--- a/roles/i3/files/i3/i3status-rust.toml
+++ b/roles/i3/files/i3/i3status-rust.toml
@@ -6,8 +6,8 @@ name = "awesome"
 
 [[block]]
 block = "custom"
-command = "xsel -o"
-on_click = "xsel -c"
+command = "xsel -o -b"
+on_click = "xsel -c -b"
 interval = 1
 
 [[block]]
