--- a/roles/tmux/files/tmux.conf
+++ b/roles/tmux/files/tmux.conf
@@ -51,7 +51,7 @@ bind-key -n C-h if-shell "$is_vim" "send-keys C-h"  "select-pane -L"
 bind-key -n C-j if-shell "$is_vim" "send-keys C-j"  "select-pane -D"
 bind-key -n C-k if-shell "$is_vim" "send-keys C-k"  "select-pane -U"
 bind-key -n C-l if-shell "$is_vim" "send-keys C-l"  "select-pane -R"
-bind-key -n C-\ if-shell "$is_vim" "send-keys C-\\" "select-pane -l"
+bind-key -n C-\\ if-shell "$is_vim" "send-keys C-\\" "select-pane -l"
 
 # Display error when ps or grep is not installed (Should not really be a problem but it is annoying to look for the bug later...)
 if-shell "ps" "" "display-message 'ps not installed vim-tmux-navigator will not work when using vim'"
