--- a/roles/i3/files/i3/config
+++ b/roles/i3/files/i3/config
@@ -159,6 +159,8 @@ exec --no-startup-id feh --bg-scale ~/.wallpaper
 exec --no-startup-id dunst
 # start flameshot (for screenshots)
 exec --no-startup-id flameshot
+# on screen keyboard
+exec --no-startup-id onboard &
 
 #exec --no-startup-id i3-msg 'workspace "1:www"; exec /usr/bin/chromium'
 #exec --no-startup-id i3-msg 'workspace "10"; exec /usr/bin/xfce4-terminal'
