fish attachGDB: Add ability to name program

--- a/roles/fish/tasks/main.yml
+++ b/roles/fish/tasks/main.yml
@@ -25,5 +25,5 @@
     - config.fish
     - "functions/fish_prompt.fish"
     - "functions/fish_user_key_bindings.fish"
-    - "functions/attachGDB_debugWrapper.fish"
+    - "functions/attachGDB.fish"
     - "functions/tmux_program_finder.fish"
