ranger: Default to open_with flag f(ork)

--- a/roles/ranger/files/ranger/rifle.conf
+++ b/roles/ranger/files/ranger/rifle.conf
@@ -6,3 +6,4 @@ mime ^image,       has feh,    X, flag f = feh -- "$@"
 mime ^video|audio, has vlc,    X, flag f = vlc -- "$@"
 
 ext pdf,           has evince, X, flag f = evince -- "$@"
+ext xopp,          has xournalpp, X, flag f = xournalpp -- "$@"
