i3: status bar top and pause-play

--- a/roles/i3/files/i3/config
+++ b/roles/i3/files/i3/config
@@ -123,8 +123,7 @@ bindsym $mod+r mode "resize"
 
 # set up the i3bar
 bar {
-  # requires pip install py3status
-  #status_command py3status -c ~/.i3/i3status.conf
+  position top
   status_command i3status-rs ~/.i3/i3status-rust.toml
   font pango: FantasqueMono, FontAwesome, 10
   separator_symbol " "
@@ -137,6 +136,7 @@ bindsym XF86MonBrightnessDown exec xbacklight -dec 5 # decrease screen brightnes
 # Volume controls
 bindsym XF86AudioRaiseVolume exec $HOME/.i3/increase_volume 5 #increase sound volume
 bindsym XF86AudioLowerVolume exec pactl set-sink-volume @DEFAULT_SINK@ -5%
+bindsym XF86AudioPlay exec playerctl play-pause
 bindsym Shift+XF86AudioRaiseVolume exec pactl set-sink-volume @DEFAULT_SINK@ +5%
 bindsym XF86AudioMute exec pactl set-sink-mute @DEFAULT_SINK@ toggle # amixer -q set Master toggle
 
