tmux/fish: Add tools for multi GDB debugging
fish: Add function to spawn AMOUNT panes with certain pre-entered text.
Most importantly an upwards counting number intended for the attachGDB
function.

tmux: Add shortcut to kill all other panes

--- a/roles/fish/tasks/main.yml
+++ b/roles/fish/tasks/main.yml
@@ -26,4 +26,5 @@
     - "functions/fish_prompt.fish"
     - "functions/fish_user_key_bindings.fish"
     - "functions/attachGDB.fish"
+    - "functions/prepareTmuxDebug.fish"
     - "functions/tmux_program_finder.fish"
