--- a/roles/tmux/files/tmux.conf
+++ b/roles/tmux/files/tmux.conf
@@ -31,6 +31,9 @@ bind-key l resize-pane -R 5
 # Allows us to use C-b b <command> to send commands to a TMUX session inside
 bind-key b send-prefix
 
+# Kill all other panes in the current window with prefix and X
+bind-key X kill-pane -a
+
 # Enable vi navigation in copy mode
 setw -g mode-keys vi
 # use vi-style key bindings in the status line
