Actually start using dunst
Configuration heavily inspired by https://dunst-project.org/static/dunstrc1

Fix config path as it is no longer in ~/.dunstrc but moved nicely to
~/.config/dunst/dunstrc

--- a/roles/dunst/tasks/main.yml
+++ b/roles/dunst/tasks/main.yml
@@ -6,8 +6,13 @@
     state: present
   when: only_config is not defined
 
+- name: Create dunst config directory
+  file:
+    dest: "~/.config/dunst"
+    state: directory
+
 - name: Symlink dunst config
   file:
     src: "{{ role_path }}/files/dunstrc"
-    dest: "~/.dunstrc"
+    dest: "~/.config/dunst/dunstrc"
     state: link
