vim: Add coc-settings.json
This files is highly important else you will debug the coc.nvim setup
for quite some till you find this file is missing.

--- a/roles/vimExtended/tasks/main.yml
+++ b/roles/vimExtended/tasks/main.yml
@@ -27,5 +27,11 @@
     - c_dev.vim
     - coc.nvim.vim
 
+- name: Symlink coc-settings.json
+  file:
+    src: "{{ role_path }}/files/coc-settings.json"
+    dest: "~/.vim/coc-settings.json"
+    state: link
+
 - name: Install plugins
   command: vim +PlugInstall +qall
