Update vim-languagetool configuration

--- a/roles/grammarchecker-vim/tasks/main.yml
+++ b/roles/grammarchecker-vim/tasks/main.yml
@@ -11,16 +11,9 @@
 
 - name: Dowload and unarchive language tool 4.0
   unarchive:
-    src: https://www.languagetool.org/download/LanguageTool-4.0.zip
+    src: https://languagetool.org/download/LanguageTool-stable.zip
     dest: "~/.vim/plugin/languagetool"
     remote_src: yes
-
-
-- name: Symlink fish config file
-  file:
-    src: "{{ role_path }}/files/languagetool.vim"
-    dest: "~/.vim/plugin/languagetool.vim"
-    state: link
 
 - name: Install vim plugins
   command: vim +PlugInstall +qall
