--- a/roles/gui-utilities/tasks/main.yml
+++ b/roles/gui-utilities/tasks/main.yml
@@ -19,7 +19,29 @@
     - discord
     - vlc
     - solaar
+    - keepassxc
+    - xdg-desktop-portal-gtk
+    - flatpak
   when: only_config is not defined
+
+- name: Download key from spotify
+  get_url:
+    url: "https://download.spotify.com/debian/pubkey_0D811D58.gpg"
+    dest: /tmp/spotify.gpg
+  when: ansible_os_family == "Archlinux" and only_config is not defined
+
+- name: Add key for spotify
+  gpg_key:
+    file: /tmp/spotify.gpg
+  when: ansible_os_family == "Archlinux" and only_config is not defined
+
+- name: Install gui-utilities from AUR
+  aur:
+    name: "{{item}}"
+    user: "{{ aur_user }}"
+  when: ansible_os_family == "Archlinux" and only_config is not defined
+  with_items:
+    - spotify
 
 #- name: Install gui-utilities from AUR
 #aur:
