--- a/.gitmodules
+++ b/.gitmodules
@@ -1,6 +1,6 @@
 [submodule "library/ansible-aur"]
 	path = library/ansible-aur
-	url = https://github.com/pigmonkey/ansible-aur.git
+	url = https://github.com/kewlfft/ansible-aur.git
 [submodule "library/ansible-gpg-key"]
 	path = library/ansible-gpg-key
 	url = https://github.com/netson/ansible-gpg-key.git
