--- a/roles/steam/tasks/main.yml
+++ b/roles/steam/tasks/main.yml
@@ -34,4 +34,4 @@
 - name: Install fonts required for steam
   aur:
     name: steam-fonts
-    user: "{{ steam_user }}"
+    state: "{{ aur_state }}"
