--- a/roles/vimExtended/tasks/main.yml
+++ b/roles/vimExtended/tasks/main.yml
@@ -13,7 +13,7 @@
 - name: Install required tools from AUR
   aur:
     name: bear
-    user: "{{ vim_user }}"
+    state: "{{ aur_state }}"
   when: ansible_os_family == "Archlinux" and only_config is not defined
 
 - name: Create vimrc directory
