--- a/roles/i3/files/i3/config
+++ b/roles/i3/files/i3/config
@@ -15,7 +15,7 @@ bindsym $mod+Shift+q kill
 bindsym $mod+d exec dmenu_run
 
 # play/pause media content
-bindsym Scroll_Lock exec playerctl play-pause
+bindsym Scroll_Lock exec playerctl -p spotify play-pause
 
 # change focus
 bindsym $mod+h focus left
@@ -139,7 +139,7 @@ bindsym XF86MonBrightnessDown exec xbacklight -dec 5 # decrease screen brightnes
 # Volume controls
 bindsym XF86AudioRaiseVolume exec $HOME/.i3/increase_volume 5 #increase sound volume
 bindsym XF86AudioLowerVolume exec pactl set-sink-volume @DEFAULT_SINK@ -5%
-bindsym XF86AudioPlay exec playerctl play-pause
+bindsym XF86AudioPlay exec playerctl -p spotify play-pause
 bindsym Shift+XF86AudioRaiseVolume exec pactl set-sink-volume @DEFAULT_SINK@ +5%
 bindsym XF86AudioMute exec pactl set-sink-mute @DEFAULT_SINK@ toggle # amixer -q set Master toggle
 
