Handle newlines in i3 status bar
For some reason i3 is no longer able to handle newlines in the clipboard
showing. So we need to replace them...

--- a/roles/i3/files/i3/i3status-rust.toml
+++ b/roles/i3/files/i3/i3status-rust.toml
@@ -6,7 +6,7 @@ name = "awesome"
 
 [[block]]
 block = "custom"
-command = "xsel -o -b"
+command = "xsel -o -b | sed -e 's/\\n//g' | xargs echo -n"
 on_click = "xsel -c -b"
 interval = 1
 
