--- a/roles/vim/tasks/main.yml
+++ b/roles/vim/tasks/main.yml
@@ -1,15 +1,8 @@
 ---
-- include_vars: "{{ item }}"
-  with_first_found:
-      - "../vars/{{ ansible_distribution }}-{{ ansible_distribution_major_version | int}}.yml"
-      - "../vars/{{ ansible_distribution }}.yml"
-      - "../vars/{{ ansible_os_family }}.yml"
-      - "../vars/default.yml"
-
 - name: Install vim
   become: true
   package:
-    name: "{{ vim_package_name }}"
+    name: neovim
     state: present
   when: only_config is not defined
 
