--- a/roles/vimExtended/files/coc-settings.json
+++ b/roles/vimExtended/files/coc-settings.json
@@ -13,5 +13,8 @@
         }
       }
     }
-  }
+  },
+  "python.linting.pylintEnabled": false,
+  "python.linting.flake8Enabled": true,
+  "python.linting.enabled": true
 }
