--- a/roles/i3/files/i3/config
+++ b/roles/i3/files/i3/config
@@ -104,6 +104,12 @@ bindsym $mod+Shift+r restart
 # exit i3 (logs you out of your X session)
 bindsym $mod+Shift+e exec "i3-nagbar -t warning -m 'You pressed the exit shortcut. Do you really want to exit i3? This will end your X session.' -b 'Yes, exit i3' 'i3-msg exit'"
 
+# dunst shortcuts
+bindsym Mod1+space exec /usr/bin/dunstctl close
+bindsym Mod1+shift+space exec /usr/bin/dunstctl close-all
+bindsym Mod1+period exec /usr/bin/dunstctl history-pop
+bindsym Mod1+shift+period exec /usr/bin/dunstctl context
+
 # resize window (you can also use the mouse for that)
 mode "resize" {
         # These bindings trigger as soon as you enter the resize mode
