Let autoupdate service recover on failure
Since the service often runs shortly after hibernate recover network
often is not there yet. So there should be a retry on failure to avoid
that issue every day on boot.

--- a/roles/autoupdate/files/autoupdate.service
+++ b/roles/autoupdate/files/autoupdate.service
@@ -9,6 +9,8 @@ ExecStart=/usr/bin/nice -n 19 /usr/bin/pacman -Syuwq --noconfirm
 TimeoutStopSec=600
 KillMode=process
 KillSignal=SIGINT
+Restart=on-failure
+RestartSec=30m
 
 [Install]
 WantedBy=multi-user.target
