--- a/roles/i3/files/i3/config
+++ b/roles/i3/files/i3/config
@@ -165,7 +165,7 @@ exec --no-startup-id nm-applet
 # set background picture
 exec --no-startup-id feh --bg-scale ~/.wallpaper
 # start dunst notification daemon
-exec --no-startup-id dunst
+exec --no-startup-id /usr/lib/xfce4/notifyd/xfce4-notifyd
 # start flameshot (for screenshots)
 exec --no-startup-id flameshot
 # on screen keyboard
