Move back to vim, neovim needs more thinking
Revert 0656a85e6d7d0373493ad6f8b5257580f32700ef

--- a/roles/vim/tasks/main.yml
+++ b/roles/vim/tasks/main.yml
@@ -2,7 +2,7 @@
 - name: Install vim
   become: true
   package:
-    name: neovim
+    name: gvim
     state: present
   when: only_config is not defined
 
