Add omnisharp and remove cscope from vim

--- a/roles/vimExtended/files/coc-settings.json
+++ b/roles/vimExtended/files/coc-settings.json
@@ -16,5 +16,8 @@
   },
   "python.linting.pylintEnabled": false,
   "python.linting.flake8Enabled": true,
-  "python.linting.enabled": true
+  "python.linting.enabled": true,
+  "coc.source.OmniSharp.enable" : true,
+  "coc.source.OmniSharp.triggerCharacters": ".",
+  "omnisharp.useGlobalMono":"always"
 }
