--- a/roles/i3/files/i3/i3status-rust.toml
+++ b/roles/i3/files/i3/i3status-rust.toml
@@ -1,19 +1,20 @@
 [theme]
-name = "slick"
+theme = "slick"
 
 [icons]
-name = "awesome"
+icons = "awesome4"
 
 [[block]]
 block = "custom"
 command = "xsel -o -b | sed -e 's/\\n//g' | xargs echo -n"
-on_click = "xsel -c -b"
 interval = 1
+[[block.click]]
+button = "left"
+cmd = "xsel -c -b"
 
 [[block]]
 block = "memory"
-display_type = "memory"
-format_mem = "{mem_used}+{swap_used} ({mem_used_percents})"
+format = "$mem_used+$swap_used ($mem_used_percents)"
 
 [[block]]
 block = "cpu"
@@ -21,19 +22,24 @@ interval = 1
 
 [[block]]
 block = "sound"
-on_click="pavucontrol"
+[[block.click]]
+button = "left"
+cmd ="pavucontrol"
 
 [[block]]
 block = "net"
-format = "{signal_strength} {ip}"
+format = "$signal_strength $ip"
+
+[[block]]
+block = "battery"
+device = "BAT0"
 
 [[block]]
 block = "disk_space"
 path = "/"
-alias = "/"
-format = "{alias} {available}"
+format = "/ $available"
 info_type = "available"
-unit = "GB"
+alert_unit = "GB"
 interval = 20
 warning = 10
 alert = 5
@@ -41,10 +47,9 @@ alert = 5
 [[block]]
 block = "disk_space"
 path = "/home"
-alias = "~"
-format = "{alias} {available}"
+format = "~ $available"
 info_type = "available"
-unit = "GB"
+alert_unit = "GB"
 interval = 20
 warning = 20
 alert = 10
@@ -52,5 +57,7 @@ alert = 10
 [[block]]
 block = "time"
 interval = 60
-format = "%a %d.%m %R"
-on_click = "gsimplecal"
+format = "$icon $timestamp.datetime(f:'%a %d.%m %R')"
+[[block.click]]
+button = "left"
+cmd = "gsimplecal"
