--- a/roles/sway/tasks/main.yml
+++ b/roles/sway/tasks/main.yml
@@ -16,11 +16,13 @@
     name:
       - alsa-utils
       - bemenu-wayland
+      - grim
       - gsimplecal
       - kanshi
       - lib32-mesa
       - lib32-vulkan-radeon
       - mesa
+      - slurp
       - sway
       - swayidle
       - swaylock
